# Backend-Migration-v2

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  _claude.md  _plan_claude_cdb58f4f-73e0-4388-9dbb-8fb185d1d4ea.md  docker-compose.yml  homelend.sh  pom.xml  pyproject.toml
doc/: api_data_management.md  req.md  system_hardening.md
frontend/: next.config.mjs
scripts/: load_test.py  rollback.py  security_audit.py  validate_migration.py
services/auth_service/: Dockerfile  app.py  auth_routes.py  config.py  db.py  jwt_filter.py  models.py
services/data_service/: Dockerfile  app.py  config.py  db.py  models.py
services/data_service/repositories/: property_repository.py  underwriting_decision_repository.py
services/data_service/routes/: property_routes.py  underwriting_routes.py
services/health_service/: Dockerfile  app.py
services/shared/: database.py
src/main/java/com/zcloud/platform/: ZCloudPlatformApplication.java
src/main/java/com/zcloud/platform/config/: AppConfig.java  Constants.java  CorsConfig.java  DatabaseConfig.java  (+1 more)
src/main/resources/: application-dev.properties  application-prod.properties  application.properties  data.sql  schema.sql
tests/: conftest.py  test_auth_encryption.py  test_auth_login.py  test_auth_logout.py  test_auth_password.py  test_auth_token.py  test_data_management_validation.py  test_data_service.py  test_database_config.py  test_database_connectivity.py  test_docker_containers.py  test_health_endpoint.py  test_integration_microservices.py  test_migration_validation.py
(+87 files in other folders)
